INTYG-3516: Fixat layout (och responsive beteende) på fk7263 Vårdenhet fält

--- a/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
+++ b/fk7263/src/main/resources/META-INF/resources/webjars/fk7263/webcert/css/fk7263.scss
@@ -70,6 +70,14 @@ This is to avoid leaking module specific style rules outside of it's intended co
     position: relative;
   }
 
+  .form15 {
+    .form-horizontal {
+      .form-group {
+        padding-top: 10px;
+      }
+    }
+  }
+
   .edit-form {
     textarea#currentWork.form-control {
       padding: 2px 4px;
