--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/css/ts-diabetes.scss
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/css/ts-diabetes.scss
@@ -63,7 +63,7 @@ This is to avoid leaking module specific style rules outside of it's intended co
     text-align: center;
   }
 
-  h5.inline-heading {
+  .inline-heading {
     padding: 20px 0 5px;
   }
 
