--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/intyg/intyg.html
@@ -5,14 +5,17 @@
     <div ui-view="header"></div>
 
     <div ng-show="!viewState.common.activeErrorMessageKey">
-      <div id="certificate" ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
+      <div id="certificate"
+           ng-class="{'certificate': true, 'revoked-certificate' : viewState.common.intygProperties.isRevoked}">
         <div class="row">
           <div class="col-md-12">
             <div class="intyg-body">
 
               <!-- Patientens uppgifter -->
               <div wc-field field-label="common.intyg.patientadress" filled="true">
-                <span class="intyg-answer"><span id="patientpostadress">{{viewState.intygModel.grundData.patient.postadress}}</span><br><span id="patientpostnummer">{{viewState.intygModel.grundData.patient.postnummer}}</span> <span id="patientpostort">{{viewState.intygModel.grundData.patient.postort}}</span></span>
+                <span class="intyg-answer"><span id="patientpostadress">{{viewState.intygModel.grundData.patient.postadress}}</span><br><span
+                    id="patientpostnummer">{{viewState.intygModel.grundData.patient.postnummer}}</span> <span
+                    id="patientpostort">{{viewState.intygModel.grundData.patient.postort}}</span></span>
               </div>
 
               <!-- Intyget avser -->
@@ -22,7 +25,8 @@
 
               <!-- Identiteten är styrkt genom -->
               <div wc-field field-dynamic-label="KAT_100.RBK" filled="true">
-                <span id="identitet"><span class="intyg-answer" dynamic-label key="IDENTITET_{{viewState.intygModel.vardkontakt.idkontroll}}.RBK"></span></span>
+                <span id="identitet"><span class="intyg-answer" dynamic-label
+                                           key="IDENTITET_{{viewState.intygModel.vardkontakt.idkontroll}}.RBK"></span></span>
               </div>
 
               <!-- 1. Allmänt diabetes -->
@@ -34,29 +38,36 @@
                 <p>
                   <span dynamic-label key="FRG_18.RBK"></span><br>
                   <span id="diabetestyp"><span class="intyg-answer" message
-                        key="ts-diabetes.label.diabetes.diabetestyp.{{viewState.intygModel.diabetes.diabetestyp}}"></span></span>
+                                               key="ts-diabetes.label.diabetes.diabetestyp.{{viewState.intygModel.diabetes.diabetestyp}}"></span></span>
                 </p>
 
-                <h3 dynamic-label key="FRG_19.RBK"></h3>
-                <p>
-                  <span dynamic-label key="DFR_19.1.RBK"></span>
-                  <span id="endastKost"><span class="intyg-answer" message key="{{viewState.intygModel.diabetes.endastKost | BoolToTextFilter}}"></span></span><br>
+                <h4 dynamic-label key="FRG_19.RBK"></h4>
+                <div class="form-group">
+                  <span dynamic-label key="DFR_19.1.RBK"></span><br>
+                  <span id="endastKost"><span class="intyg-answer" message
+                                              key="{{viewState.intygModel.diabetes.endastKost | BoolToTextFilter}}"></span></span><br>
+                </div>
 
-                  <span dynamic-label key="DFR_19.2.RBK"></span>
-                  <span id="tabletter"><span class="intyg-answer" message key="{{viewState.intygModel.diabetes.tabletter | BoolToTextFilter}}"></span></span><br>
+                <div class="form-group">
+                  <span dynamic-label key="DFR_19.2.RBK"></span><br>
+                  <span id="tabletter"><span class="intyg-answer" message
+                                             key="{{viewState.intygModel.diabetes.tabletter | BoolToTextFilter}}"></span></span><br>
+                </div>
 
-                  <span dynamic-label key="DFR_19.3.RBK"></span>
-                  <span id="insulin"><span class="intyg-answer" message key="{{viewState.intygModel.diabetes.insulin | BoolToTextFilter}}"></span></span><br>
-                  <br>
+                <div class="form-group">
+                  <span dynamic-label key="DFR_19.3.RBK"></span><br>
+                  <span id="insulin"><span class="intyg-answer" message
+                                           key="{{viewState.intygModel.diabetes.insulin | BoolToTextFilter}}"></span></span><br>
                   <span ng-show="viewState.intygModel.diabetes.insulinBehandlingsperiod.length > 0">
                     <span dynamic-label key="DFR_19.4.RBK"></span><br>
                     <span class="intyg-answer" id="insulinBehandlingsperiod">{{viewState.intygModel.diabetes.insulinBehandlingsperiod}}</span>
                   </span>
-                </p>
+                </div>
                 <p>
                   <span dynamic-label key="DFR_19.5.RBK"></span><br>
                   <span id="annanBehandlingBeskrivning">
-                    <span ng-show="viewState.intygModel.diabetes.annanBehandlingBeskrivning && viewState.intygModel.diabetes.annanBehandlingBeskrivning.length > 0">
+                    <span
+                        ng-show="viewState.intygModel.diabetes.annanBehandlingBeskrivning && viewState.intygModel.diabetes.annanBehandlingBeskrivning.length > 0">
                       <span class="intyg-answer">{{viewState.intygModel.diabetes.annanBehandlingBeskrivning}}</span>
                     </span>
                     <span class="intyg-answer" ng-show="!viewState.intygModel.diabetes.annanBehandlingBeskrivning">
@@ -71,62 +82,63 @@
 
                 <!-- a -->
                 <p>
-                  <span dynamic-label key="FRG_36.RBK"></span>
+                  <span dynamic-label key="FRG_36.RBK"></span><br>
                   <span id="kunskapOmAtgarder"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.hypoglykemier.kunskapOmAtgarder | BoolToTextFilter}}"></span></span>
+                                                     key="{{viewState.intygModel.hypoglykemier.kunskapOmAtgarder | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <!-- b -->
                 <p>
-                  <span dynamic-label key="FRG_37.RBK"></span>
+                  <span dynamic-label key="FRG_37.RBK"></span><br>
                   <span id="teckenNedsattHjarnfunktion"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.hypoglykemier.teckenNedsattHjarnfunktion | BoolToTextFilter}}"></span></span>
+                                                              key="{{viewState.intygModel.hypoglykemier.teckenNedsattHjarnfunktion | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <!-- c -->
                 <p>
-                  <span dynamic-label key="FRG_38.RBK"></span>
+                  <span dynamic-label key="FRG_38.RBK"></span><br>
                   <span id="saknarFormagaKannaVarningstecken"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.hypoglykemier.saknarFormagaKannaVarningstecken | BoolToTextFilter}}"></span></span>
+                                                                    key="{{viewState.intygModel.hypoglykemier.saknarFormagaKannaVarningstecken | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <!-- d -->
                 <div class="form-group">
-                  <span dynamic-label key="FRG_39.RBK"></span>
+                  <span dynamic-label key="FRG_39.RBK"></span><br>
                   <span id="allvarligForekomst"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.hypoglykemier.allvarligForekomst | BoolToTextFilter}}"></span></span>
+                                                      key="{{viewState.intygModel.hypoglykemier.allvarligForekomst | BoolToTextFilter}}"></span></span>
                 </div>
-                <div class="form-group indent" ng-show="viewState.intygModel.hypoglykemier.allvarligForekomstBeskrivning">
-                  <span dynamic-label key="DFR_39.2.RBK"></span>
+                <div class="form-group indent"
+                     ng-show="viewState.intygModel.hypoglykemier.allvarligForekomstBeskrivning">
+                  <span dynamic-label key="DFR_39.2.RBK"></span><br>
                   <span id="allvarligForekomstBeskrivning"><span class="intyg-answer">{{viewState.intygModel.hypoglykemier.allvarligForekomstBeskrivning}}</span></span><br>
                 </div>
 
                 <!-- e -->
                 <div class="form-group">
-                  <span dynamic-label key="FRG_40.RBK"></span>
+                  <span dynamic-label key="FRG_40.RBK"></span><br>
                   <span id="allvarligForekomstTrafiken"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.hypoglykemier.allvarligForekomstTrafiken | BoolToTextFilter}}"></span></span>
+                                                              key="{{viewState.intygModel.hypoglykemier.allvarligForekomstTrafiken | BoolToTextFilter}}"></span></span>
                 </div>
                 <div class="form-group indent"
                      ng-show="viewState.intygModel.hypoglykemier.allvarligForekomstTrafikBeskrivning.length > 0">
-                  <span dynamic-label key="DFR_40.2.RBK"></span>
+                  <span dynamic-label key="DFR_40.2.RBK"></span><br>
                   <span id="allvarligForekomstTrafikBeskrivning"><span class="intyg-answer">{{viewState.intygModel.hypoglykemier.allvarligForekomstTrafikBeskrivning}}</span></span>
                 </div>
 
                 <!-- f -->
                 <div class="form-group">
-                  <span dynamic-label key="FRG_41.RBK"></span>
+                  <span dynamic-label key="FRG_41.RBK"></span><br>
                   <span id="egenkontrollBlodsocker"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.hypoglykemier.egenkontrollBlodsocker | BoolToTextFilter}}"></span></span>
+                                                          key="{{viewState.intygModel.hypoglykemier.egenkontrollBlodsocker | BoolToTextFilter}}"></span></span>
                 </div>
 
                 <!-- g -->
                 <div class="form-group">
-                  <span dynamic-label key="FRG_42.RBK"></span>
+                  <span dynamic-label key="FRG_42.RBK"></span><br>
                   <span id="allvarligForekomstVakenTid"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.hypoglykemier.allvarligForekomstVakenTid | BoolToTextFilter}}"></span></span><br>
+                                                              key="{{viewState.intygModel.hypoglykemier.allvarligForekomstVakenTid | BoolToTextFilter}}"></span></span><br>
                   <p ng-show="viewState.intygModel.hypoglykemier.allvarligForekomstVakenTidObservationstid.length > 0">
-                    <span dynamic-label key="DFR_42.2.RBK"></span>
+                    <span dynamic-label key="DFR_42.2.RBK"></span><br>
                     <span id="allvarligForekomstVakenTidObservationstid"><span class="intyg-answer">{{viewState.intygModel.hypoglykemier.allvarligForekomstVakenTidObservationstid}}</span></span>
                   </p>
                 </div>
@@ -135,22 +147,22 @@
               <!-- 3 -->
               <div wc-field field-dynamic-label="KAT_3.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_43.RBK"></span>
+                  <span dynamic-label key="FRG_43.RBK"></span><br>
                   <span id="separatOgonlakarintyg"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.syn.separatOgonlakarintyg | BoolToTextFilter}}"></span></span>
+                                                         key="{{viewState.intygModel.syn.separatOgonlakarintyg | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <div ng-hide="viewState.intygModel.syn.separatOgonlakarintyg">
                   <p>
-                    <span dynamic-label key="FRG_44.RBK"></span>
+                    <span dynamic-label key="FRG_44.RBK"></span><br>
                     <span id="synfaltsprovningUtanAnmarkning"><span class="intyg-answer" message
-                          key="{{viewState.intygModel.syn.synfaltsprovningUtanAnmarkning | BoolToTextFilter}}"></span></span>
+                                                                    key="{{viewState.intygModel.syn.synfaltsprovningUtanAnmarkning | BoolToTextFilter}}"></span></span>
                   </p>
                   <p>
                     <span dynamic-label key="FRG_8.RBK"></span>
                   </p>
                   <div>
-                    <table class="table table-condensed ts-table">
+                    <table class="table table-striped ts-table">
                       <tr>
                         <th></th>
                         <th>Utan korrektion</th>
@@ -158,24 +170,31 @@
                       </tr>
                       <tr>
                         <td>Höger öga</td>
-                        <td><span class="text" id="hogerutanKorrektion">{{viewState.intygModel.syn.hoger.utanKorrektion | number : 1}}</span></td>
-                        <td><span class="text" id="hogermedKorrektion">{{viewState.intygModel.syn.hoger.medKorrektion | number : 1}}</span></td>
+                        <td><span class="text" id="hogerutanKorrektion">{{viewState.intygModel.syn.hoger.utanKorrektion | number : 1}}</span>
+                        </td>
+                        <td><span class="text" id="hogermedKorrektion">{{viewState.intygModel.syn.hoger.medKorrektion | number : 1}}</span>
+                        </td>
                       </tr>
                       <tr>
                         <td>Vänster öga</td>
-                        <td><span class="text" id="vansterutanKorrektion">{{viewState.intygModel.syn.vanster.utanKorrektion | number : 1}}</span></td>
-                        <td><span class="text" id="vanstermedKorrektion">{{viewState.intygModel.syn.vanster.medKorrektion | number : 1}}</span></td>
+                        <td><span class="text" id="vansterutanKorrektion">{{viewState.intygModel.syn.vanster.utanKorrektion | number : 1}}</span>
+                        </td>
+                        <td><span class="text" id="vanstermedKorrektion">{{viewState.intygModel.syn.vanster.medKorrektion | number : 1}}</span>
+                        </td>
                       </tr>
                       <tr>
                         <td>Binokulärt</td>
-                        <td><span class="text" id="binokulartutanKorrektion">{{viewState.intygModel.syn.binokulart.utanKorrektion | number : 1}}</span></td>
-                        <td><span class="text" id="binokulartmedKorrektion">{{viewState.intygModel.syn.binokulart.medKorrektion | number : 1}}</span></td>
+                        <td><span class="text" id="binokulartutanKorrektion">{{viewState.intygModel.syn.binokulart.utanKorrektion | number : 1}}</span>
+                        </td>
+                        <td><span class="text" id="binokulartmedKorrektion">{{viewState.intygModel.syn.binokulart.medKorrektion | number : 1}}</span>
+                        </td>
                       </tr>
                     </table>
                   </div>
                   <p>
-                    <span dynamic-label key="FRG_6.RBK"></span>
-                    <span id="diplopi"><span class="intyg-answer" message key="{{viewState.intygModel.syn.diplopi | BoolToTextFilter}}"></span></span>
+                    <span dynamic-label key="FRG_6.RBK"></span><br>
+                    <span id="diplopi"><span class="intyg-answer" message
+                                             key="{{viewState.intygModel.syn.diplopi | BoolToTextFilter}}"></span></span>
                   </p>
                 </div>
               </div>
@@ -190,13 +209,13 @@
                 </div>
                 <div ng-show="viewState.intygModel.bedomning.kanInteTaStallning">
                   <span id="bedomningKanInteTaStallning"><span class="intyg-answer" dynamic-label
-                        key="DFR_33.2.RBK"></span></span><br><br>
+                                                               key="DFR_33.2.RBK"></span></span><br><br>
                 </div>
 
                 <div class="form-group">
                   <span dynamic-label key="FRG_45.RBK"></span><br>
                   <span id="lamplighetInnehaBehorighet"><span class="intyg-answer" message
-                        key="{{viewState.intygModel.bedomning.lamplighetInnehaBehorighet | BoolToTextFilter}}"></span></span>
+                                                              key="{{viewState.intygModel.bedomning.lamplighetInnehaBehorighet | BoolToTextFilter}}"></span></span>
                 </div>
 
               </div>
@@ -212,14 +231,13 @@
                 </div>
               </div>
 
-              <div wc-field field-dynamic-label="FRG_34.RBK"
-                   filled="true">
+              <div wc-field field-dynamic-label="FRG_34.RBK" filled="true">
                 <div id="lakareSpecialKompetens">
                   <span ng-show="viewState.intygModel.bedomning.lakareSpecialKompetens.length > 0">
                     <span class="intyg-answer">{{viewState.intygModel.bedomning.lakareSpecialKompetens}}</span><br>
                   </span>
                   <span class="intyg-answer" ng-show="!viewState.intygModel.bedomning.lakareSpecialKompetens" message
-                          key="ts-diabetes.label.bedomning-info-ej-angivet"></span>
+                        key="ts-diabetes.label.bedomning-info-ej-angivet"></span>
                 </div>
               </div>
 
@@ -236,9 +254,12 @@
                 </h4>
                 <span id="vardperson_namn">{{viewState.intygModel.grundData.skapadAv.fullstandigtNamn}}</span><br>
                 <span id="vardperson_enhetsnamn">{{viewState.intygModel.grundData.skapadAv.vardenhet.enhetsnamn}}</span><br>
-                <span id="vardenhet_postadress">{{viewState.intygModel.grundData.skapadAv.vardenhet.postadress}}</span><br>
-                <span id="vardenhet_postnummer">{{viewState.intygModel.grundData.skapadAv.vardenhet.postnummer}}</span> <span id="vardenhet_postort">{{viewState.intygModel.grundData.skapadAv.vardenhet.postort}}</span><br>
-                <span id="vardenhet_telefonnummer">{{viewState.intygModel.grundData.skapadAv.vardenhet.telefonnummer}}</span><br>
+                <span
+                    id="vardenhet_postadress">{{viewState.intygModel.grundData.skapadAv.vardenhet.postadress}}</span><br>
+                <span id="vardenhet_postnummer">{{viewState.intygModel.grundData.skapadAv.vardenhet.postnummer}}</span>
+                <span id="vardenhet_postort">{{viewState.intygModel.grundData.skapadAv.vardenhet.postort}}</span><br>
+                <span
+                    id="vardenhet_telefonnummer">{{viewState.intygModel.grundData.skapadAv.vardenhet.telefonnummer}}</span><br>
               </div>
 
             </div>
