--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/intyg/intyg.html
@@ -29,19 +29,19 @@
               <div wc-field field-dynamic-label="KAT_1.RBK" filled="true">
                 <!-- a -->
                 <p>
-                  <span dynamic-label key="FRG_3.RBK"></span>
+                  <span dynamic-label key="FRG_3.RBK"></span><br>
                   <span id="synfaltsdefekter"><span class="intyg-answer" message key="{{viewState.intygModel.syn.synfaltsdefekter | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <!-- b -->
                 <p>
-                  <span dynamic-label key="FRG_4.RBK"></span>
+                  <span dynamic-label key="FRG_4.RBK"></span><br>
                   <span id="nattblindhet"><span class="intyg-answer" message key="{{viewState.intygModel.syn.nattblindhet | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <!-- c -->
                 <p>
-                  <span dynamic-label key="FRG_5.RBK"></span>
+                  <span dynamic-label key="FRG_5.RBK"></span><br>
                   <span id="progressivOgonsjukdom"><span class="intyg-answer" message key="{{viewState.intygModel.syn.progressivOgonsjukdom | BoolToTextFilter}}"></span></span>
                 </p>
 
@@ -52,13 +52,13 @@
 
                 <!-- d -->
                 <p>
-                  <span dynamic-label key="FRG_6.RBK"></span>
+                  <span dynamic-label key="FRG_6.RBK"></span><br>
                   <span id="diplopi"><span class="intyg-answer" message key="{{viewState.intygModel.syn.diplopi | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <!-- e -->
                 <p>
-                  <span dynamic-label key="FRG_7.RBK"></span>
+                  <span dynamic-label key="FRG_7.RBK"></span><br>
                   <span id="nystagmus"><span class="intyg-answer" message key="{{viewState.intygModel.syn.nystagmus | BoolToTextFilter}}"></span></span>
                 </p>
 
@@ -67,7 +67,7 @@
                   <span dynamic-label key="FRG_8.RBK"></span>
                 </p>
 
-                <table class="table table-condensed ts-table">
+                <table class="table table-striped ts-table">
                   <tr>
                     <th></th>
                     <th>Utan korrektion</th>
@@ -97,7 +97,7 @@
                 </table>
 
                 <h3>Korrektionsglasens styrka</h3>
-                <span dynamic-label key="FRG_9.RBK"></span>
+                <span dynamic-label key="FRG_9.RBK"></span><br>
                 <span id="korrektionsglasensStyrka"><span class="intyg-answer" message
                       key="{{viewState.intygModel.syn.korrektionsglasensStyrka | BoolToTextFilter}}"></span></span>
                 <div class="alert alert-info" ng-show="viewState.intygModel.syn.korrektionsglasensStyrka == true">
@@ -108,12 +108,12 @@
               <!-- 2 -->
               <div wc-field field-dynamic-label="KAT_2.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_10.RBK"></span>
+                  <span dynamic-label key="FRG_10.RBK"></span><br>
                   <span id="horselBalansbalansrubbningar"><span class="intyg-answer" message
                         key="{{viewState.intygModel.horselBalans.balansrubbningar | BoolToTextFilter}}"></span></span>
                 </p>
                 <p ng-show="viewState.intygModel.horselBalans.svartUppfattaSamtal4Meter != null">
-                  <span dynamic-label key="FRG_11.RBK"></span>
+                  <span dynamic-label key="FRG_11.RBK"></span><br>
                   <span id="horselBalanssvartUppfattaSamtal4Meter"><span class="intyg-answer" message
                         key="{{viewState.intygModel.horselBalans.svartUppfattaSamtal4Meter | BoolToTextFilter}}"></span></span>
                 </p>
@@ -125,7 +125,8 @@
                 <!-- a -->
                 <p>
                   <span dynamic-label key="FRG_12.RBK"></span>
-            			<span id="funktionsnedsattning"><span class="intyg-answer" message
+                  <span id="funktionsnedsattning"><br>
+                    <span class="intyg-answer" message
                         key="{{viewState.intygModel.funktionsnedsattning.funktionsnedsattning | BoolToTextFilter}}"></span></span>
                 </p>
                 <p class="indent" ng-show="viewState.intygModel.funktionsnedsattning.funktionsnedsattning">
@@ -135,7 +136,7 @@
 
                 <!-- b -->
                 <p ng-show="viewState.intygModel.funktionsnedsattning.otillrackligRorelseformaga != null">
-                  <span dynamic-label key="FRG_13.RBK"></span>
+                  <span dynamic-label key="FRG_13.RBK"></span><br>
             			<span id="funktionsnedsattningotillrackligRorelseformaga"><span class="intyg-answer" message
                         key="{{viewState.intygModel.funktionsnedsattning.otillrackligRorelseformaga | BoolToTextFilter}}"></span></span>
                 </p>
@@ -169,12 +170,12 @@
               <!-- 5 -->
               <div wc-field field-dynamic-label="KAT_5.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_17.RBK"></span>
+                  <span dynamic-label key="FRG_17.RBK"></span><br>
                   <span id="harDiabetes"><span class="intyg-answer" message key="{{viewState.intygModel.diabetes.harDiabetes | BoolToTextFilter}}"></span></span>
                 </p>
                 <div ng-show="viewState.intygModel.diabetes.harDiabetes">
                   <p>
-                    <span dynamic-label key="FRG_18.RBK"></span>
+                    <span dynamic-label key="FRG_18.RBK"></span><br>
             			  <span id="diabetesTyp"><span class="intyg-answer" message
                             key="ts-bas.label.diabetes.diabetestyp.{{viewState.intygModel.diabetes.diabetesTyp}}"></span></span>
                   </p>
@@ -197,7 +198,7 @@
               <!-- 6 -->
               <div wc-field field-dynamic-label="KAT_6.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_20.RBK"></span>
+                  <span dynamic-label key="FRG_20.RBK"></span><br>
             			<span id="neurologiskSjukdom"><span class="intyg-answer" message
                         key="{{viewState.intygModel.neurologi.neurologiskSjukdom | BoolToTextFilter}}"></span></span>
                 </p>
@@ -207,7 +208,7 @@
               <!-- 7 -->
               <div wc-field field-dynamic-label="KAT_7.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_21.RBK"></span>
+                  <span dynamic-label key="FRG_21.RBK"></span><br>
             			<span id="medvetandestorning"><span class="intyg-answer" message
                         key="{{viewState.intygModel.medvetandestorning.medvetandestorning | BoolToTextFilter}}"></span></span>
                 </p>
@@ -220,7 +221,7 @@
 
               <!-- 8 -->
               <div wc-field field-dynamic-label="KAT_8.RBK" filled="true">
-                <span dynamic-label key="FRG_22.RBK"></span>
+                <span dynamic-label key="FRG_22.RBK"></span><br>
                 <span id="nedsattNjurfunktion"><span class="intyg-answer" message
                       key="{{viewState.intygModel.njurar.nedsattNjurfunktion | BoolToTextFilter}}"></span></span>
 
@@ -228,7 +229,7 @@
 
               <!-- 9 -->
               <div wc-field field-dynamic-label="KAT_9.RBK" filled="true">
-                <span dynamic-label key="FRG_23.RBK"></span>
+                <span dynamic-label key="FRG_23.RBK"></span><br>
                 <span id="sviktandeKognitivFunktion"><span class="intyg-answer" message
                       key="{{viewState.intygModel.kognitivt.sviktandeKognitivFunktion | BoolToTextFilter}}"></span></span>
 
@@ -236,7 +237,7 @@
 
               <!-- 10 -->
               <div wc-field field-dynamic-label="KAT_10.RBK" filled="true">
-                <span dynamic-label key="FRG_24.RBK"></span>
+                <span dynamic-label key="FRG_24.RBK"></span><br>
                 <span id="teckenSomnstorningar"><span class="intyg-answer" message
                       key="{{viewState.intygModel.somnVakenhet.teckenSomnstorningar | BoolToTextFilter}}"></span></span>
 
@@ -245,20 +246,20 @@
               <!-- 11 -->
               <div wc-field field-dynamic-label="KAT_11.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="DFR_25.1.RBK"></span>
+                  <span dynamic-label key="DFR_25.1.RBK"></span><br>
             			<span id="teckenMissbruk"><span class="intyg-answer" message
                         key="{{viewState.intygModel.narkotikaLakemedel.teckenMissbruk | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <p>
-                  <span dynamic-label key="DFR_25.2.RBK"></span>
+                  <span dynamic-label key="DFR_25.2.RBK"></span><br>
             			<span id="foremalForVardinsats"><span class="intyg-answer" message
                         key="{{viewState.intygModel.narkotikaLakemedel.foremalForVardinsats | BoolToTextFilter}}"></span></span>
                 </p>
 
                 <div ng-show="viewState.intygModel.narkotikaLakemedel.foremalForVardinsats || viewState.intygModel.narkotikaLakemedel.teckenMissbruk">
                   <p>
-                    <span dynamic-label key="DFR_25.3.RBK"></span>
+                    <span dynamic-label key="DFR_25.3.RBK"></span><br>
 	            			<span id="provtagningBehovs"><span class="intyg-answer" message
                           key="{{viewState.intygModel.narkotikaLakemedel.provtagningBehovs | BoolToTextFilter}}"></span></span>
                   </p>
@@ -270,7 +271,7 @@
                 </div>
 
                 <p>
-                  <span dynamic-label key="FRG_26.RBK"></span>
+                  <span dynamic-label key="FRG_26.RBK"></span><br>
             			<span id="lakarordineratLakemedelsbruk"><span class="intyg-answer" message
                         key="{{viewState.intygModel.narkotikaLakemedel.lakarordineratLakemedelsbruk | BoolToTextFilter}}"></span></span>
                 </p>
@@ -284,19 +285,19 @@
 
               <!-- 12 -->
               <div wc-field field-dynamic-label="KAT_12.RBK" filled="true">
-                <span dynamic-label key="FRG_27.RBK"></span>
+                <span dynamic-label key="FRG_27.RBK"></span><br>
                 <span id="psykiskSjukdom"><span class="intyg-answer" message key="{{viewState.intygModel.psykiskt.psykiskSjukdom | BoolToTextFilter}}"></span></span>
               </div>
 
               <!-- 13 -->
               <div wc-field field-dynamic-label="KAT_13.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_28.RBK"></span>
+                  <span dynamic-label key="FRG_28.RBK"></span><br>
             			<span id="psykiskUtvecklingsstorning"><span class="intyg-answer" message
                         key="{{viewState.intygModel.utvecklingsstorning.psykiskUtvecklingsstorning | BoolToTextFilter}}"></span></span>
                 </p>
                 <p>
-                  <span dynamic-label key="FRG_29.RBK"></span>
+                  <span dynamic-label key="FRG_29.RBK"></span><br>
             			<span id="harSyndrom"><span class="intyg-answer" message
                         key="{{viewState.intygModel.utvecklingsstorning.harSyndrom | BoolToTextFilter}}"></span></span>
                 </p>
@@ -305,18 +306,18 @@
               <!-- 14 -->
               <div wc-field field-dynamic-label="KAT_14.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_30.RBK"></span>
+                  <span dynamic-label key="FRG_30.RBK"></span><br>
             		  <span id="sjukhusEllerLakarkontakt"><span class="intyg-answer" message
                           key="{{viewState.intygModel.sjukhusvard.sjukhusEllerLakarkontakt | BoolToTextFilter}}"></span></span>
                 </p>
                 <p class="indent" ng-show="viewState.intygModel.sjukhusvard.sjukhusEllerLakarkontakt">
-                  <span dynamic-label key="DFR_30.2.RBK"></span>
+                  <span dynamic-label key="DFR_30.2.RBK"></span><br>
                   <span class="intyg-answer" id="tidpunkt">{{viewState.intygModel.sjukhusvard.tidpunkt}}</span><br />
 
-                  <span dynamic-label key="DFR_30.3.RBK"></span>
+                  <span dynamic-label key="DFR_30.3.RBK"></span><br>
                   <span class="intyg-answer" id="vardinrattning">{{viewState.intygModel.sjukhusvard.vardinrattning}}</span><br />
 
-                  <span dynamic-label key="DFR_30.4.RBK"></span>
+                  <span dynamic-label key="DFR_30.4.RBK"></span><br>
                   <span class="intyg-answer" id="sjukhusvardanledning">{{viewState.intygModel.sjukhusvard.anledning}}</span><br />
                 </p>
               </div>
@@ -324,7 +325,7 @@
               <!-- 15 -->
               <div wc-field field-dynamic-label="KAT_15.RBK" filled="true">
                 <p>
-                  <span dynamic-label key="FRG_31.RBK"></span>
+                  <span dynamic-label key="FRG_31.RBK"></span><br>
             		  <span id="stadigvarandeMedicinering"><span class="intyg-answer" message
                           key="{{viewState.intygModel.medicinering.stadigvarandeMedicinering | BoolToTextFilter}}"></span></span>
                 </p>
