--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form17.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form17.html
@@ -3,7 +3,7 @@
      field-dynamic-label="KAT_101.RBK"
      field-help-text="ts-bas.helptext.intyg-avser"  field-has-errors="viewState.common.validation.messagesGrouped.bedomning" id="bedomningForm">
 
-  <p><span dynamic-label key="FRG_33.RBK"></span> *</p>
+  <p><span dynamic-label key="FRG_33.RBK"></span> <span class="required">*</span></p>
 
   <div class="form-group">
     <wc-validation-group field-type="check-group" validations="viewState.getValidationErrors('bedomning')">
