--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form2.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form2.html
@@ -15,7 +15,7 @@
                  ng-model="viewState.intygModel.horselBalans.balansrubbningar" ng-change="validate()"></td>
       <td><input id="horselbalansan" name="horselbalansa" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.horselBalans.balansrubbningar" ng-change="validate()"></td>
-      <td><span dynamic-label key="FRG_10.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_10.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('balansrubbningar')"></wc-field-validation></td></tr>
     <tr ng-show="viewState.korkortd">
@@ -23,7 +23,7 @@
                  ng-model="viewState.intygModel.horselBalans.svartUppfattaSamtal4Meter" ng-change="validate()"></td>
       <td><input id="horselbalansbn" name="horselbalansb" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.horselBalans.svartUppfattaSamtal4Meter" ng-change="validate()"></td>
-      <td><span dynamic-label key="FRG_11.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_11.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('svartupfattasamtal4meter')"></wc-field-validation></td></tr>
   </table>
