--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form7.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form7.html
@@ -15,7 +15,7 @@
       <td><input id="medvetandestorningan" name="medvetandestorninga" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.medvetandestorning.medvetandestorning" ng-change="validate()"></td>
       <td>
-        <p><span dynamic-label key="FRG_21.RBK"></span> *</p>
+        <p><span dynamic-label key="FRG_21.RBK"></span> <span class="required">*</span></p>
 
         <div ng-show="viewState.intygModel.medvetandestorning.medvetandestorning">
           <p>
