--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/identity.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/identity.html
@@ -5,7 +5,7 @@
      field-required="true"
      id="identitetForm">
 
-  <div class="row form-group">
+  <div class="form-group">
     <wc-validation-group field-type="check-group" validations="viewState.getValidationErrors('identitet')">
       <div class="clearfix">
         <label class="radio col-xs-6" ng-repeat="v in viewState.identitet">
