--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form7.html
@@ -16,7 +16,7 @@
   <div class="form-horizontal form-group">
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postadress')">
       <div class="row">
-        <label class="col-md-2 control-label">Postadress *</label>
+        <label class="col-md-2 control-label">Postadress <span class="required">*</span></label>
         <div class="col-md-10">
           <input type="text" class="form-control input-full" id="clinicInfoPostalAddress"
                  name="clinicInfo.postalAddress" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postadress"
@@ -29,7 +29,7 @@
   <div class="form-horizontal form-group">
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postnummer')">
       <div class="row">
-        <label class="col-md-2 control-label">Postnummer *</label>
+        <label class="col-md-2 control-label">Postnummer <span class="required">*</span></label>
         <div class="col-md-10">
           <input type="text" class="form-control input-5" id="clinicInfoPostalCode"
                  name="clinicInfo.postalCode" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postnummer"
@@ -42,7 +42,7 @@
   <div class="form-horizontal form-group">
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postort')">
       <div class="row">
-        <label class="col-md-2 control-label">Postort *</label>
+        <label class="col-md-2 control-label">Postort <span class="required">*</span></label>
         <div class="col-md-10">
           <input type="text" class="form-control" id="clinicInfoPostalCity"
                  name="clinicInfo.postalCity" ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.postort"
@@ -55,7 +55,7 @@
   <div class="form-horizontal form-group">
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.telefonnummer')">
       <div class="row">
-        <label class="col-md-2 control-label">Telefonnummer *</label>
+        <label class="col-md-2 control-label">Telefonnummer <span class="required">*</span></label>
         <div class="col-md-10">
           <input type="text" class="form-control" id="clinicInfoPhone" name="clinicInfo.phone"
                  ng-model="viewState.intygModel.grundData.skapadAv.vardenhet.telefonnummer" maxlength="20" ng-blur="validate()">
