--- a/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/css/_common.scss
@@ -749,11 +749,11 @@ input.ng-invalid-date {
 .intyg-body .validation {
     display: table;
     padding: 0 10px;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 0;
 }
 
-TD .validation {
+.intyg-body td .validation {
     margin-top: 0;
     margin-bottom: 10px;
 }
