--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form10.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form10.html
@@ -14,7 +14,7 @@
                  ng-model="viewState.intygModel.somnVakenhet.teckenSomnstorningar" ng-change="validate()"></td>
       <td><input id="somnvakenhetb" name="somnvakenhetb" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.somnVakenhet.teckenSomnstorningar" ng-change="validate()"></td>
-      <td><span dynamic-label key="FRG_24.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_24.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('teckenSomnstorningar')"></wc-field-validation></td></tr>
   </table>
