--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form14.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form14.html
@@ -15,11 +15,11 @@
       <td><input name="sjukhusvarda" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.sjukhusvard.sjukhusEllerLakarkontakt" ng-change="validate()"></td>
       <td>
-        <p><span dynamic-label key="FRG_30.RBK"></span> *</p>
+        <p><span dynamic-label key="FRG_30.RBK"></span> <span class="required">*</span></p>
 
         <table ng-show="viewState.intygModel.sjukhusvard.sjukhusEllerLakarkontakt">
           <tr>
-            <td class="col-md-6"><span dynamic-label key="DFR_30.2.RBK"></span> *</td>
+            <td class="col-md-6"><span dynamic-label key="DFR_30.2.RBK"></span> <span class="required">*</span></td>
             <td class="col-md-6 table-padding-top">
               <wc-validation-wrapper field-type="single-text" validations="viewState.getValidationErrors('tidpunkt')">
                 <input id="tidpunkt" name="tidpunkt"
@@ -32,7 +32,7 @@
             </td>
           </tr>
           <tr>
-            <td class="col-md-6"><span dynamic-label key="DFR_30.3.RBK"></span> *</td>
+            <td class="col-md-6"><span dynamic-label key="DFR_30.3.RBK"></span> <span class="required">*</span></td>
             <td class="col-md-6 table-padding-top">
               <wc-validation-wrapper field-type="single-text" validations="viewState.getValidationErrors('vardinrattning')">
                 <input id="vardinrattning" name="vardinrattning"
@@ -45,7 +45,7 @@
             </td>
           </tr>
           <tr>
-            <td class="col-md-6"><span dynamic-label key="DFR_30.4.RBK"></span> *</td>
+            <td class="col-md-6"><span dynamic-label key="DFR_30.4.RBK"></span> <span class="required">*</span></td>
             <td class="col-md-6 table-padding-top">
               <wc-validation-wrapper field-type="single-text" validations="viewState.getValidationErrors('anledning')">
                 <input id="anledning" name="anledning"
