--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form18.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form18.html
@@ -16,7 +16,7 @@
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postadress')">
       <div class="row">
         <label class="col-md-2 control-label">
-          <span message key="ts-bas.form.postadress"></span> *
+          <span message key="ts-bas.form.postadress"></span> <span class="required">*</span>
         </label>
         <div class="col-md-10">
           <input type="text" class="form-control input-full" id="clinicInfoPostalAddress"
@@ -30,7 +30,7 @@
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postnummer')">
       <div class="row">
         <label class="col-md-2 control-label">
-          <span message key="ts-bas.form.postnummer"></span> *
+          <span message key="ts-bas.form.postnummer"></span> <span class="required">*</span>
         </label>
         <div class="col-md-10">
           <input type="text" class="form-control input-5" id="clinicInfoPostalCode"
@@ -44,7 +44,7 @@
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.postort')">
       <div class="row">
         <label class="col-md-2 control-label">
-          <span message key="ts-bas.form.postort"></span> *
+          <span message key="ts-bas.form.postort"></span> <span class="required">*</span>
         </label>
         <div class="col-md-10">
           <input type="text" class="form-control" id="clinicInfoPostalCity"
@@ -58,7 +58,7 @@
     <wc-validation-wrapper label-col-size="3" field-type="single-text" validations="viewState.getValidationErrors('vardenhet.telefonnummer')">
       <div class="row">
         <label class="col-md-2 control-label">
-          <span message key="ts-bas.form.telefonnummer"></span> *
+          <span message key="ts-bas.form.telefonnummer"></span> <span class="required">*</span>
         </label>
         <div class="col-md-10">
           <input type="text" class="form-control" id="clinicInfoPhone" name="clinicInfo.phone"
