--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form4.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form4.html
@@ -14,7 +14,7 @@
                  ng-model="viewState.intygModel.hjartKarl.hjartKarlSjukdom" ng-change="validate()"></td>
       <td><input id="hjartkarlan" name="hjartkarla" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.hjartKarl.hjartKarlSjukdom" ng-change="validate()"></td>
-      <td><span dynamic-label key="FRG_14.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_14.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('hjartkarlsjukdom')"></wc-field-validation></td></tr>
     <tr>
@@ -22,7 +22,7 @@
                  ng-model="viewState.intygModel.hjartKarl.hjarnskadaEfterTrauma" ng-change="validate()"></td>
       <td><input id="hjartkarlbn" name="hjartkarlb" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.hjartKarl.hjarnskadaEfterTrauma" ng-change="validate()"></td>
-      <td><span dynamic-label key="FRG_15.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_15.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('hjarnskadaeftertrauma')"></wc-field-validation></td></tr>
     <tr>
@@ -30,11 +30,11 @@
                  ng-model="viewState.intygModel.hjartKarl.riskfaktorerStroke" ng-change="validate()"></td>
       <td><input id="hjartkarlcn" name="hjartkarlc" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.hjartKarl.riskfaktorerStroke" ng-change="validate()"></td>
-      <td><p><span dynamic-label key="FRG_16.RBK"></span> *</p>
+      <td><p><span dynamic-label key="FRG_16.RBK"></span> <span class="required">*</span></p>
 
         <div ng-show="viewState.intygModel.hjartKarl.riskfaktorerStroke">
           <wc-validation-wrapper field-type="multi-text" validations="viewState.getValidationErrors('beskrivningriskfaktorer')">
-            <p><span dynamic-label key="DFR_16.2.RBK"></span> *</p>
+            <p><span dynamic-label key="DFR_16.2.RBK"></span> <span class="required">*</span></p>
             <textarea class="form-control" ng-model="viewState.intygModel.hjartKarl.beskrivningRiskfaktorer"
                       wc-maxlength ng-trim="false" maxlength="{{viewState.inputLimits.beskrivningRiskfaktorer}}"
                       id="beskrivningRiskfaktorer" rows="4" auto-expand
