--- a/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form6.html
+++ b/ts/ts-bas/src/main/resources/META-INF/resources/webjars/ts-bas/webcert/views/utkast/form/form6.html
@@ -15,7 +15,7 @@
       <td><input id="neurologian" name="neurologia" type="radio" ng-value="false"
                  ng-model="viewState.intygModel.neurologi.neurologiskSjukdom" ng-change="validate()"></td>
       <td>
-        <p><span dynamic-label key="FRG_20.RBK"></span> *</p>
+        <p><span dynamic-label key="FRG_20.RBK"></span> <span class="required">*</span></p>
       </td>
     </tr>
     <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('neurologiskSjukdom')"></wc-field-validation></td></tr>
