--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form1.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form1.html
@@ -5,14 +5,14 @@
      field-has-errors="viewState.common.validation.messagesGrouped.diabetes"
      id="allmantForm">
   <div class="form-group" wc-validation-wrapper field-type="single-text" validations="viewState.getValidationErrors('observationsperiod')">
-    <label for="diabetesyear"><span dynamic-label key="FRG_35.RBK"></span> *</label>
+    <label for="diabetesyear"><span dynamic-label key="FRG_35.RBK"></span> <span class="required">*</span></label>
     <div class="controls">
       <input id="diabetesyear" class="form-control input-year" type="text" maxlength="4"
              ng-model="viewState.intygModel.diabetes.observationsperiod" ng-blur="validate()"/>
     </div>
   </div>
   <div class="form-group" wc-validation-wrapper field-type="radio-group" validations="viewState.getValidationErrors('diabetesTyp')">
-    <span dynamic-label key="FRG_18.RBK"></span> *
+    <span dynamic-label key="FRG_18.RBK"></span> <span class="required">*</span>
     <label class="radio">
       <input name="diabetestyp" type="radio" value="DIABETES_TYP_1" ng-model="viewState.intygModel.diabetes.diabetestyp" ng-change="validate()">
       <span>Typ 1</span>
@@ -26,7 +26,7 @@
   <wc-validation-group field-type="check-group" validations="viewState.getValidationErrors('behandling')">
 
     <div class="form-group">
-      <span dynamic-label key="FRG_19.RBK"></span> *
+      <span dynamic-label key="FRG_19.RBK"></span> <span class="required">*</span>
       <label class="checkbox">
         <input id="diabetestreat1" name="diabetestreat1" type="checkbox" ng-model="viewState.intygModel.diabetes.endastKost" ng-change="validate()">
         <span dynamic-label key="DFR_19.1.RBK"></span>
@@ -42,7 +42,7 @@
       <div class="form-group indent" ng-show="viewState.intygModel.diabetes.insulin"
            wc-validation-wrapper field-type="single-text" validations="viewState.getValidationErrors('insulin')">
         <label for="insulinBehandlingsperiod">
-          <span dynamic-label key="DFR_19.4.RBK"></span> *</label>
+          <span dynamic-label key="DFR_19.4.RBK"></span> <span class="required">*</span></label>
         <div class="controls">
           <input id="insulinBehandlingsperiod" class="form-control input-year"
                  name="insulinBehandlingsperiod" type="text"
