--- a/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form2.html
+++ b/ts/ts-diabetes/src/main/resources/META-INF/resources/webjars/ts-diabetes/webcert/views/utkast/form/form2.html
@@ -18,7 +18,7 @@
       <td class="text-center">
         <input id="hypoan" name="hypoa" type="radio" ng-value="false" ng-model="viewState.intygModel.hypoglykemier.kunskapOmAtgarder" ng-change="validate()">
       </td>
-      <td><span dynamic-label key="FRG_36.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_36.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr>
       <td colspan="3">
@@ -32,7 +32,7 @@
       <td class="text-center">
         <input id="hypobn" name="hypob" type="radio" ng-value="false" ng-model="viewState.intygModel.hypoglykemier.teckenNedsattHjarnfunktion" ng-change="validate()">
       </td>
-      <td><span dynamic-label key="FRG_37.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_37.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr>
       <td colspan="3">
@@ -45,7 +45,7 @@
       </td>
       <td class="text-center"><input id="hypocn" name="hypoc" type="radio" ng-value="false" ng-model="viewState.intygModel.hypoglykemier.saknarFormagaKannaVarningstecken" ng-change="validate()">
       </td>
-      <td><span dynamic-label key="FRG_38.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_38.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr ng-show="viewState.intygModel.hypoglykemier.teckenNedsattHjarnfunktion">
       <td colspan="3">
@@ -59,7 +59,7 @@
       <td class="text-center">
         <input id="hypodn" name="hypod" type="radio" ng-value="false" ng-model="viewState.intygModel.hypoglykemier.allvarligForekomst" ng-change="validate()">
       </td>
-      <td><span dynamic-label key="FRG_39.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_39.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr ng-show="viewState.intygModel.hypoglykemier.teckenNedsattHjarnfunktion">
       <td colspan="3">
@@ -72,7 +72,7 @@
         <div class="controls">
           <wc-validation-wrapper field-type="multi-text" validations="viewState.getValidationErrors('allvarligForekomstBeskrivning')">
             <label for="allvarligForekomstBeskrivning">
-              <span dynamic-label key="DFR_39.2.RBK"></span> *
+              <span dynamic-label key="DFR_39.2.RBK"></span> <span class="required">*</span>
             </label>
             <input id="allvarligForekomstBeskrivning" class="form-control input-full"
                    name="allvarligForekomstBeskrivning" type="text"
@@ -92,7 +92,7 @@
         <input id="hypoen" name="hypoe" type="radio" ng-value="false"
                ng-model="viewState.intygModel.hypoglykemier.allvarligForekomstTrafiken" ng-change="validate()">
       </td>
-      <td><span dynamic-label key="FRG_40.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_40.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr ng-show="viewState.intygModel.hypoglykemier.teckenNedsattHjarnfunktion">
       <td colspan="3">
@@ -105,7 +105,7 @@
         <div class="controls">
           <wc-validation-wrapper field-type="multi-text" validations="viewState.getValidationErrors('allvarligForekomstTrafikBeskrivning')">
             <label for="allvarligForekomstTrafikBeskrivning">
-              <span dynamic-label key="DFR_40.2.RBK"></span> *
+              <span dynamic-label key="DFR_40.2.RBK"></span> <span class="required">*</span>
             </label>
             <input id="allvarligForekomstTrafikBeskrivning" class="form-control input-full"
                    name="allvarligForekomstTrafikBeskrivning" type="text"
@@ -131,7 +131,7 @@
         <input id="hypofn" name="hypof" type="radio" ng-value="false"
                ng-model="viewState.intygModel.hypoglykemier.egenkontrollBlodsocker" ng-change="validate()">
       </td>
-      <td><span dynamic-label key="FRG_41.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_41.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr><td colspan="3"><wc-field-validation field-type="radio-group" validations="viewState.getValidationErrors('egenkontrollBlodsocker')"></wc-field-validation></td></tr>
 
@@ -145,7 +145,7 @@
         <input id="hypogn" name="hypog" type="radio" ng-value="false"
                ng-model="viewState.intygModel.hypoglykemier.allvarligForekomstVakenTid" ng-change="validate()">
       </td>
-      <td><span dynamic-label key="FRG_42.RBK"></span> *</td>
+      <td><span dynamic-label key="FRG_42.RBK"></span> <span class="required">*</span></td>
     </tr>
     <tr>
       <td colspan="3">
@@ -156,7 +156,7 @@
       <td>
         <div class="controls form-inline webcert-top-padding-section">
           <wc-validation-wrapper field-type="multi-text" validations="viewState.getValidationErrors('allvarligForekomstVakenTidObservationstid')">
-            <label class="control-label"><span dynamic-label key="DFR_42.2.RBK"></span> *</label>
+            <label class="control-label"><span dynamic-label key="DFR_42.2.RBK"></span> <span class="required">*</span></label>
             <span wc-date-picker-field target-model="viewState.intygModel.hypoglykemier.allvarligForekomstVakenTidObservationstid"
                   on-blur="validate()"
                   dom-id="allvarligForekomstVakenTidObservationstid"
